fix(card): remove extra margin if header doesn't have an avatar
The card header margin was set up assuming that there would always be an avatar element, but that's not always the case. These changes add an extra check to avoid the extra margin.

Fixes #19069.

--- a/src/material/card/card.scss
+++ b/src/material/card/card.scss
@@ -103,7 +103,17 @@ $mat-card-header-size: 40px !default;
 }
 
 .mat-card-header-text {
-  margin: 0 $mat-card-padding;
+  &:not(:first-child) {
+    margin-left: $mat-card-padding;
+  }
+
+  [dir='rtl'] & {
+    margin-left: 0;
+
+    &:not(:first-child) {
+      margin-right: $mat-card-padding;
+    }
+  }
 }
 
 .mat-card-avatar {
